kubepi/kubepi-pvc.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubepi
  namespace: kube-system
spec:
  #type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: kubepi

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubepi
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kubepi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubepi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubepi
    spec:
      containers:
        - name: kubepi
          image: kubeoperator/kubepi-server:v1.6.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          securityContext:
            privileged: true
          volumeMounts:
            - name: kubepi-persistent-storage
              mountPath: /var/lib/kubepi
      volumes:
        - name: kubepi-persistent-storage
          persistentVolumeClaim:
            claimName: kubepi-pv-claim
